--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container header-content">
             <a href="#" class="logo">
                 <span class="logo-icon">🏏</span>
-                Cricket Pro Shop
+                DHRUV SPORTS
             </a>
             <nav class="main-nav">
                 <a href="index.html#catalog">Shop</a>
@@ -203,4 +203,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
